Fix header icon spacing problems

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -16,23 +16,18 @@ a:hover {
  
 /* Header - Mobile Edits */
   
-@media screen and (max-width: 989px) {
-  .header {
-    padding-left: 15px !important;
-    padding-right: 15px !important;
-  }
-}
-  
+
 
 /* Icons */
 
-.header__icon {
-  color: rgb(var(--color-header-foreground));
-  height: 3.4rem;
-  width: 5.2rem;
-  }
 
-.header__icon .icon {
+.header__icon {
+  height: 4.4rem;
+  width: 4.4rem;
+  padding: 0;
+}
+
+.header__icon--cart .icon {
   height: 2rem !important;
 width: 2rem !important;
 }
@@ -133,15 +128,36 @@ width: 2rem !important;
 
 
 
-@media screen and (max-width: 749px){
-  .desktop-search {
-    display:none;
+@media screen and (max-width: 989px){
+  .desktop-search,
+  .icon-description {
+    display:none !important;
   }
+
+  header .header__icons .header__icon {
+    padding: 0 !important;
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+
+  header .header__icons {
+    width: auto !important;
+  }
+
+  header .cart-count-bubble {
+    left: 2rem !important;
+  }
+
 }
 
-@media screen and (min-width: 750px){
+@media screen and (min-width: 990px){
   .header__search:not(.desktop-search),
   .mobile-search {
     display:none !important;
   }
+}
+
+
+slideshow-component {
+  padding: 0 !important;
 }
